source/stylesheets/components/_app.css.scss
/* ... */
.btn-sm,
.btn-group-sm > .btn {
  padding: 5px 10px;
  font-size: 12px;
  line-height: 1.5;
}
.btn-theme {
  color: #fff;
  background-color: transparent;
  border-color: #fff;
  -webkit-transition: all 500ms ease;
  -moz-transition: all 500ms ease;
  -ms-transition: all 500ms ease;
  transition: all 500ms ease;
}
.btn-theme:hover,
.btn-theme .active {
  color: #000;
  background-color: #fff;
}
.btn-theme-inverse {
  color: #363636;
  border-color: #363636;
  -webkit-transition: all 500ms ease;
  -moz-transition: all 500ms ease;
  -ms-transition: all 500ms ease;
  transition: all 500ms ease;
  background: transparent;
}
.btn-theme-inverse:hover {
  color: #fff;
  background-color: #363636;
}
/*
 *	Forms
 *  --------------------------------------------------------- */
.form-control {
  height: 42px;
  border-radius: 0;
  border: 1px solid transparent;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
.form-control:focus {
  outline: 0;
  border-color: transparent;
  -webkit-box-shadow: none;
  box-shadow: none;
  -moz-box-shadow: none;
}
.has-feedback .form-control-feedback {
  line-height: 44px;
  width: 44px;
  height: 44px;
}
.has-success .form-control,
.has-error .form-control,
.has-success .form-control:focus,
.has-error .form-control:focus {
  -webkit-box-shadow: none;
  box-shadow: none;
  -moz-box-shadow: none;
}
form.signup input[type="email"] {
  height: 42px;
  width: 250px;
  border-radius: 0;
  margin: 0 5px;
}
form.signup button.btn {
  font-weight: 700;
}
.form-group .form-control {
  display: inline-block;
}
/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .form-group .form-control {
    display: block;
  }
}
/*
 *	Panel
 *  --------------------------------------------------------- */
.panel-body,
.panel-body p {
  font-size: 12px;
  line-height: 20px;
}
.panel-title {
  font-size: 14px;
}
/*
 *	Progress bar
 *  --------------------------------------------------------- */
.progress {
  -webkit-border-radius: 0;
  -webkit-background-clip: padding-box;
  -moz-border-radius: 0;
  -moz-background-clip: padding;
  border-radius: 0;
  background-clip: padding-box;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
.progress-bar {
  background-color: #869198;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
/*
 *	Media
 *  --------------------------------------------------------- */
.media > .pull-left {
  margin-right: 16px;
}

/* ---------------------------------------------------------
 *	FontAwesome
 * --------------------------------------------------------- */
.fa-li {
  top: 5px;
}


/*
 * Skills
 * --------------------------------------------------------- */
.personal-skills h4 {
  margin-bottom: 25px;
}
.lang-container {
  display: inline-block;
  margin-right: 30px;
  text-align: center;
}
.lang-description {
  margin-bottom: 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 2px;
  font-weight: 700;
  margin-top: 10px;
}
.lang-level {
  font-size: 12px;
  opacity: 0.7;
}
.skills-ul {
  font-size: 14px;
  text-align: left;
}

.prog-ul {
  padding-top: 10px;
  padding-bottom: 10px;
  width: 105px;
  height: 160px;
}

@media (min-width: 992px) {
  .skill-column {
    max-width: 21%;
  }
}

/*
 * Facts
 * --------------------------------------------------------- */
#facts h1 {
  font-weight: 700;
}
@media (min-width: 400px) and (max-width: 768px) {
  #facts [class*="col-"] {
    width: 47%;
    margin: 10px 1.5%;
    padding: 0;
    float: left;
  }
}
/*
 * Contact
 * --------------------------------------------------------- */
#contact {
  background: #2d2e2e;
}
.list-contacts {
  list-style: none;
  padding-left: 0;
  margin: 2em 0;
}
.list-contacts li {
  margin-bottom: 10px;
  display: table;
}
.list-contacts [class*="fa-"] {
  margin-right: 15px;
  display: table-cell;
  width: 30px;
}
#contactForm .form-control[name="name"] {
  margin-bottom: 14px;
}
.ladda-button .ladda-spinner{
  top: 50%;
  margin-left: 5px;
  margin-top: 0;
}
/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .list-contacts {
    list-style: none;
    padding-left: 0;
    margin-top: 2em;
  }
  #contactForm .form-control[name="name"] {
    margin-bottom: 0;
  }
}
/* ---------------------------------------------------------
 *	Index
 * --------------------------------------------------------- */
.main {
  width: 100%;
  height: 350px;
  background-color: transparent;
  display: block;
  position: relative;
  z-index: 2000;
  text-align: center;
}
/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .main {
    height: 100%;
    max-height: 100%;
  }
}
.page {
  display: table;
  width: 100%;
  height: 100%;
  padding: 20px 0;
}
.wrapper {
  padding: 15px 0;
  display: table-cell;
  vertical-align: middle;
  height: 100%;
}
.wrapper .container {
  margin-top: 35px;
}
/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  .wrapper .container {
    width: 1050px;
  }
}
/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .page {
    padding: 40px 0;
  }
  .wrapper {
    padding: 0;
  }
}
/*
 * Home
 * --------------------------------------------------------- */
.heading {
  color: #fff;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
  font-size: 1.5625em;
  text-transform: uppercase;
  font-weight: 700;
  margin: 30px 0 10px;
  line-height: 1.30208333em;
}

.hobbies {
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

#signupForm .form-control-feedback {
  visibility: hidden;
}
lesshat-selector {
  -lh-property: 0; }
/* ... */

